tests/e2e/testdata/compiled-cases/input-validation/stacks/invalid/object-unknown-field.ub
stack: {
  state: local {
    path: '.unobin/state'
  }

  encryption: noop {}

  factory: {
    inputs: {
      required-name: 'web'
      rule: { from-port: 80, to-port: 443, surprise: 'yes' }
    }
  }
}
